Bug 41754 - HTMLTreeBuilder is way too slow
Summary: HTMLTreeBuilder is way too slow
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-07 03:12 PDT by Eric Seidel (no email)
Modified: 2010-07-07 10:44 PDT (History)
2 users (show)

See Also:


Attachments
Patch (4.70 KB, patch)
2010-07-07 03:15 PDT, Eric Seidel (no email)
commit-queue: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-07 03:12:28 PDT
HTMLTreeBuilder is way too slow
Comment 1 Eric Seidel (no email) 2010-07-07 03:15:56 PDT
Created attachment 60714 [details]
Patch
Comment 2 Adam Barth 2010-07-07 03:17:50 PDT
Comment on attachment 60714 [details]
Patch

Yeah, I'm not sure Vector is the right thing either.  We do too much surgery on the list.  Might be nice to get stats for how big it is typically.
Comment 3 Adam Barth 2010-07-07 10:11:38 PDT
Comment on attachment 60714 [details]
Patch

Clearing flags on attachment: 60714

Committed r62678: <http://trac.webkit.org/changeset/62678>
Comment 4 Adam Barth 2010-07-07 10:11:43 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 WebKit Commit Bot 2010-07-07 10:44:08 PDT
Comment on attachment 60714 [details]
Patch

Rejecting patch 60714 from commit-queue.

Unexpected failure when processing patch!  Please file a bug against webkit-patch.
Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 60714, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1
Last 500 characters of output:
cgi?id=60714&action=edit
Fetching: https://bugs.webkit.org/show_bug.cgi?id=41754&ctype=xml
Processing 1 patch from 1 bug.
Cleaning working directory
Processing patch 60714 from bug 41754.
NOBODY (OOPS!) found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py.
ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).